Allow calculator to receive input and display it

--- a/index.html
+++ b/index.html
@@ -3,8 +3,37 @@
   <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <div class="calculator">
+      <div class="display">10101</div>
+      <div class="top-row">
+        <button class="clear">Clear</button>
+      </div>
+      <div class="numpad">
+        <div class="row-1">
+          <button class="7">7</button>
+          <button class="8">8</button>
+          <button class="9">9</button>
+        </div>
+        <div class="row-2">
+          <button class="4">4</button>
+          <button class="5">5</button>
+          <button class="6">6</button>
+        </div>
+        <div class="row-3">
+          <button class="1">1</button>
+          <button class="2">2</button>
+          <button class="3">3</button>
+        </div>
+        <div class="row-4">
+          <button class="0">0</button>
+          <button class="00">00</button>
+          <button class=".">.</button>
+        </div>
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
