--- a/index.html
+++ b/index.html
@@ -13,25 +13,31 @@
       </div>
       <div class="numpad">
         <div class="row-1">
-          <button class="7">7</button>
-          <button class="8">8</button>
-          <button class="9">9</button>
+          <button class="num 7">7</button>
+          <button class="num 8">8</button>
+          <button class="num 9">9</button>
         </div>
         <div class="row-2">
-          <button class="4">4</button>
-          <button class="5">5</button>
-          <button class="6">6</button>
+          <button class="num 4">4</button>
+          <button class="num 5">5</button>
+          <button class="num 6">6</button>
         </div>
         <div class="row-3">
-          <button class="1">1</button>
-          <button class="2">2</button>
-          <button class="3">3</button>
+          <button class="num 1">1</button>
+          <button class="num 2">2</button>
+          <button class="num 3">3</button>
         </div>
         <div class="row-4">
-          <button class="0">0</button>
-          <button class="00">00</button>
-          <button class=".">.</button>
+          <button class="num 0">0</button>
+          <button class="num .">.</button>
+          <button class="=">=</button>
         </div>
+      </div>
+      <div class="operations">
+        <button class="+">+</button>
+        <button class="-">-</button>
+        <button class="*">*</button>
+        <button class="/">/</button>
       </div>
     </div>
     <script src="./script.js"></script>
