Add calculating function
Added multiple event listeners and slightly modified some functions and/or HTML. Currecntly works for 1 operation at a time.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="display">10101</div>
+      <div class="display">0</div>
       <div class="top-row">
         <button class="clear">Clear</button>
       </div>
@@ -29,15 +29,14 @@
         </div>
         <div class="row-4">
           <button class="num 0">0</button>
-          <button class="num .">.</button>
-          <button class="=">=</button>
+          <button class="equals">=</button>
         </div>
       </div>
-      <div class="operations">
-        <button class="+">+</button>
-        <button class="-">-</button>
-        <button class="*">*</button>
-        <button class="/">/</button>
+      <div class="operators">
+        <button class="add">+</button>
+        <button class="subtract">-</button>
+        <button class="multiply">*</button>
+        <button class="divide">/</button>
       </div>
     </div>
     <script src="./script.js"></script>
