--- a/index.html
+++ b/index.html
@@ -11,32 +11,34 @@
       <div class="top-row">
         <button class="clear">Clear</button>
       </div>
-      <div class="numpad">
-        <div class="row-1">
-          <button class="num 7">7</button>
-          <button class="num 8">8</button>
-          <button class="num 9">9</button>
+      <div class="container">
+        <div class="numpad">
+          <div class="row-1">
+            <button class="num 7">7</button>
+            <button class="num 8">8</button>
+            <button class="num 9">9</button>
+          </div>
+          <div class="row-2">
+            <button class="num 4">4</button>
+            <button class="num 5">5</button>
+            <button class="num 6">6</button>
+          </div>
+          <div class="row-3">
+            <button class="num 1">1</button>
+            <button class="num 2">2</button>
+            <button class="num 3">3</button>
+          </div>
+          <div class="row-4">
+            <button class="num 0">0</button>
+            <button class="equals">=</button>
+          </div>
         </div>
-        <div class="row-2">
-          <button class="num 4">4</button>
-          <button class="num 5">5</button>
-          <button class="num 6">6</button>
+        <div class="operators">
+          <button class="add">+</button>
+          <button class="subtract">-</button>
+          <button class="multiply">*</button>
+          <button class="divide">/</button>
         </div>
-        <div class="row-3">
-          <button class="num 1">1</button>
-          <button class="num 2">2</button>
-          <button class="num 3">3</button>
-        </div>
-        <div class="row-4">
-          <button class="num 0">0</button>
-          <button class="equals">=</button>
-        </div>
-      </div>
-      <div class="operators">
-        <button class="add">+</button>
-        <button class="subtract">-</button>
-        <button class="multiply">*</button>
-        <button class="divide">/</button>
       </div>
     </div>
     <script src="./script.js"></script>
